--- a/Assignment_2/2 - Deployment/style.css
+++ b/Assignment_2/2 - Deployment/style.css
@@ -1,3 +1,7 @@
+.gap {
+  height: 25px;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
   background-color: white;
@@ -41,6 +45,11 @@ li {
 a {
   text-decoration: none;
   color: black;
+}
+
+a:hover {
+  color: blue;
+  text-decoration: underline;
 }
 
 button {
@@ -144,7 +153,7 @@ form {
   border-style: none;
   height: 30px;
   margin-bottom: 15px;
-  margin-top: 15px;
+  margin-top: 5px;
   border: 1px solid black;
   border-radius: 10px;
 }
@@ -153,4 +162,41 @@ form {
   border-style: none;
   border: 1px solid black;
   border-radius: 10px;
+}
+
+.contactCard {
+  display: flex;
+  flex-direction: column;
+  justify-self: center;
+}
+
+.conForm {
+  display: flex;
+  align-self: center;
+  flex-direction: column;
+  width: 900px;
+  padding: 15px;
+  margin-top: 35px;
+  margin-bottom: 35px;
+}
+
+.p1 {
+  width: 48%;
+}
+
+.msg {
+  height: 55px;
+}
+
+.shortBTN {
+  width: 80px;
+}
+
+.ourPART {
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  width: 520px;
+  align-items: center;
+  justify-content: space-between;
 }
