--- a/Assignment_2/2 - Deployment/style.css
+++ b/Assignment_2/2 - Deployment/style.css
@@ -200,3 +200,43 @@ form {
   align-items: center;
   justify-content: space-between;
 }
+
+.cardIMG {
+  max-width: 100%;
+  display: block;
+}
+
+.card-list {
+  width: 100%;
+  max-width: 300px;
+}
+
+.cardP {
+  background-color: #fff;
+  border: 1px solid grey;
+}
+
+.card-header {
+  background-color: rgb(240, 240, 240);
+  padding: 1.1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+  a {
+    font-weight: 600;
+    font-size: 1.375rem;
+    text-decoration: none;
+    color: inherit;
+  }
+}
+
+.FlyingCardTow {
+  display: flex;
+  flex-direction: column;
+  width: 450px;
+  border: 1px solid black;
+  padding: 10px;
+  border-radius: 14px;
+  margin: 15px;
+}
